--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-three/drei": "^8.10.1",
     "@react-three/fiber": "^7.0.26",
+    "@react-three/postprocessing": "^2.1.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "babel-plugin-glsl": "^1.0.0",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
+    "leva": "^0.9.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
